cmake_minimum_required(VERSION 3.25)
project(atmosim LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CONFIGURATION_TYPES "Debug;Test;Release;Web" CACHE STRING "Configuration types" FORCE)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/libs)

file(GLOB_RECURSE LIB_SOURCES "src/*.cpp")
list(FILTER LIB_SOURCES EXCLUDE REGEX "main\\.cpp$")
add_library(atmosim_lib STATIC ${LIB_SOURCES})

file(GLOB_RECURSE MAIN_SOURCE "src/main.cpp")
add_executable(atmosim ${MAIN_SOURCE})
target_link_libraries(atmosim PRIVATE atmosim_lib)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_link_options(atmosim PRIVATE -static -static-libgcc -static-libstdc++)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(atmosim PRIVATE -Wall -Wextra -pedantic -g)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    target_compile_options(atmosim PRIVATE -O3 -ffast-math -flto=auto)
    target_link_options(atmosim PRIVATE -flto=auto -s)
elseif(CMAKE_BUILD_TYPE STREQUAL "Test")
    target_compile_options(atmosim PRIVATE -O3 -ffast-math -flto=auto)
    target_link_options(atmosim PRIVATE -flto=auto)
    file(GLOB_RECURSE TEST_SOURCES "tests/*.cpp")
    find_package(Catch2 REQUIRED)
    add_executable(tests ${TEST_SOURCES})
    target_link_libraries(tests PRIVATE atmosim_lib Catch2::Catch2WithMain)
    target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/tests include libs)
    enable_testing()
    add_test(NAME AllTests COMMAND tests)
elseif(CMAKE_BUILD_TYPE STREQUAL "Web")
    target_compile_options(atmosim PRIVATE -O3 -ffast-math -flto=auto)
    target_link_options(atmosim PRIVATE -flto=auto -sEXPORTED_RUNTIME_METHODS=callMain -sMODULARIZE=1 -sENVIRONMENT=web -sNO_EXIT_RUNTIME=1 -sEXPORT_NAME='createAtmosim' -sINVOKE_RUN=0 -sNO_DISABLE_EXCEPTION_CATCHING)
endif()
